# prx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: FORMAT.md  PRXHUB.md  TUI-GUIDE.md
scripts/: bump-version.sh
src/prx/: __init__.py  __main__.py  auth.py
src/prx/api/: __init__.py  signing.py
src/prx/cli/: __init__.py  branch.py  clone.py  config.py  diff.py  export.py  fork.py  keys.py  list_cmd.py  login.py  mr.py  publish.py  push.py  read.py  repo.py  search.py  star.py  validate.py  verify.py
src/prx/config_mod/: settings.py
src/prx/plugins/: __init__.py
src/prx/tui/: __init__.py  app.py  app.tcss
src/prx/tui/screens/: bundle_browser.py  claims_viewer.py  diff_viewer.py  report_viewer.py  sources_viewer.py
tests/: conftest.py  test_auth_flow.py  test_cli_commands.py  test_hub_commands.py  test_remaining_commands.py  test_signing.py
tests/e2e/: __init__.py  conftest.py  test_cli_binary.py
