[project]
name = "prx-cli"
version = "0.1.0"
description = ".prx format toolkit and prxhub CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "prx-spec>=0.1.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
tui = [
    "textual>=0.50",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "textual>=0.50",
]

[project.scripts]
prx = "prx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
